Refine product domain validation and error consistency